--- a/taskdetails.html
+++ b/taskdetails.html
@@ -3,8 +3,8 @@
 		<div class="left"><ons-back-button>Back</ons-back-button></div>
 		<div class="center"> Task details </div>
         <div class="right">
-			<ons-button	ng-click="modifyTask(task_title);">
-			Save <ons-icon icon="ion-checkmark" size="40px"></ons-icon>
+			<ons-button	modifier="quiet" ng-click="modifyTask(task_title);">
+			Save <ons-icon icon="ion-checkmark"></ons-icon>
 			</ons-button>
         </div>
 	</ons-toolbar>
@@ -18,10 +18,10 @@
 					</ons-col>
 					<ons-col>
 						<header>
-<span id="task-title" class="item-title"><input type="text" ng-model="task_title" placeholder="Title" class="text-input text-input--transparent" style="margin-top:8px; width: 100%;"></span>
-<span id="task-category" class="item-title"><input type="text" ng-model="task_category" placeholder="Category" class="text-input text-input--transparent" style="margin-top:8px; width: 100%;"></span>
-<span id="task-description" class="item-title"><textarea type="text" ng-model="task_description" placeholder="Description"  class="textarea textarea--transparent" style="margin-top:8px; width: 100%;"></span>
-</header>
+							<span id="task-title" class="item-title"><input type="text" ng-model="task_title" placeholder="Title" class="text-input text-input--transparent" style="margin-top:8px; width: 100%;"></span>
+							<span id="task-category" class="item-title"><input type="text" ng-model="task_category" placeholder="Category" class="text-input text-input--transparent" style="margin-top:8px; width: 100%;"></span>
+							<span id="task-description" class="item-title"><textarea type="text" ng-model="task_description" placeholder="Description"  class="textarea textarea--transparent" style="margin-top:8px; width: 100%;"></span>
+						</header>
 					</ons-col>
 				</ons-row>
 			</ons-list-item>
