Changed some elements style

--- a/memo.html
+++ b/memo.html
@@ -3,13 +3,13 @@
 		<div class="left"><ons-toolbar-button ng-click="ons.slidingMenu.toggleMenu()"><ons-icon icon="bars"></ons-icon></ons-toolbar-button></div>
 		<div class="center">My tasks</div>
 		<div class="right">
-			<ons-button onclick="myNavigator.pushPage('addtask.html')">
-			    Add Item
+			<ons-button modifier="quiet" onclick="myNavigator.pushPage('addtask.html')">
+			    New <ons-icon icon="fa-plus-circle "></ons-icon>
 			</ons-button>
 		</div>
 	</ons-toolbar>
 	<p style="text-align: center; color: #999; font-size: 14px;">{{category}}</p>
-	<div class="list-action-menu" ng-hide="countFiltered">Nothing found</div>
+	<div class="list-action-item" ng-hide="countFiltered">Nothing found</div>
 
 	<ons-list>
 		<ons-list-item ng-repeat="item in filteredMemo">
