--- a/memo.html
+++ b/memo.html
@@ -8,12 +8,12 @@
 			</ons-button>
 		</div>
 	</ons-toolbar>
-	<p style="text-align: center; color: #999; font-size: 14px;">{{category}}</p>
+	<p style="text-align: center; color: #999; font-size: 14px;">{{category_label}}</p>
 	<div class="list-action-item" ng-hide="countFiltered">Nothing found</div>
 
 	<ons-list>
 		<ons-list-item ng-repeat="item in filteredMemo">
-			<ons-carousel swipeable style="height: 72px; width: 100%;" initial-index="1" auto-scroll>
+			<ons-carousel var="{{'carousel.id' + $index}}" swipeable style="height: 72px; width: 100%;" initial-index="1" auto-scroll>
 				<ons-carousel-item class="list-action-menu">
 					<!-- ACTIONS -->
 					<div class="main-container">
@@ -21,19 +21,19 @@
 							<div class="blockInline">
 								<ons-button ng-click="deleteTask($index);">
 									Delete
-									<ons-icon icon="ion-trash-a">
+									<ons-icon icon="ion-trash-a"></ons-icon>
 								</ons-button>
 							</div>
 							<div class="blockInline">
-								<ons-button ng-click="completeTask($index);">
+								<ons-button ng-click="completeTask($index); carousel['id' + $index].setActiveCarouselItemIndex(1);" ng-show="item.category!='~'">
 									Complete
-									<ons-icon icon="ion-checkmark-round">
+									<ons-icon icon="ion-checkmark-round"></ons-icon>
 								</ons-button>
 							</div>
 							<div class="blockInline">
 								<ons-button ng-click="setSelected($index); myNavigator.pushPage('taskdetails.html');">
 									Details
-									<ons-icon icon="ion-clipboard">
+									<ons-icon icon="ion-clipboard"></ons-icon>
 								</ons-button>
 							</div>
 						</div>
@@ -41,7 +41,7 @@
 				</ons-carousel-item>
 				<ons-carousel-item class="list-action-item">
 					<div class="name">
-						{{item.title}}
+						{{item.title}} <span class="desc"><ons-icon icon="ion-checkmark-round" ng-show="item.category=='~'"></ons-icon></span>
 					</div>
 					<div class="desc">
 						{{item.date.getFullYear() + "/" + (item.date.getMonth() + 1) + "/" + item.date.getDate()}}
