--- a/readOnly_itemdetails.html
+++ b/readOnly_itemdetails.html
@@ -13,10 +13,10 @@
 					</ons-col>
 					<ons-col>
 						<header>
-							<span id="item-name" class="item-name">{{name}}</span>
-							<span id="item-category" class="item-label">{{category}}</span>
+							<span id="item-name" class="item-name">{{item_name}}</span>
+							<span id="item-category" class="item-label">{{item_category}}</span>
 						</header>
-						<p id="item-description" class="item-desc">{{description}}</p>
+						<p id="item-description" class="item-desc">{{item_description}}</p>
 					</ons-col>
 				</ons-row>
 			</ons-list-item>
