Fixed sliding menu events

--- a/memo.html
+++ b/memo.html
@@ -1,6 +1,6 @@
 <ons-page ng-controller="memoController">
 	<ons-toolbar fixed-style ng-controller="slidingMenuController">
-		<div class="left"><ons-toolbar-button ng-click="slidingMenu.openMenu(); checkSlidingMenuStatus();"><ons-icon icon="bars"></ons-icon></ons-toolbar-button></div>
+		<div class="left"><ons-toolbar-button ng-click="slidingMenu.openMenu();"><ons-icon icon="bars"></ons-icon></ons-toolbar-button></div>
 		<div class="center">My tasks</div>
 		<div class="right">
 			<ons-button modifier="quiet" onclick="myNavigator.pushPage('additem.html')">
